# django-boilerplate

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  gunicorn_config.py  manage.py  pyproject.toml  wait_for_postgres.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ruff.yml
apps/samples/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/samples/migrations/: 0001_initial.py
apps/samples/tests/: conftest.py  factories.py
apps/samples/tests/integration/: test_keys.py
apps/samples/tests/unit/: test_unit_example.py
config/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: web.conf
